build(client): add navbar component

--- a/client/projects/default/src/app/app.component.html
+++ b/client/projects/default/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div id="app" class="antialiased text-gray-900">
-  <div class="bg-gray-200 min-h-screen p-8 flex flex-wrap items-center justify-center">
+  <div class="relative bg-gray-200 min-h-screen p-8 flex flex-wrap items-center justify-center">
+    <app-navbar class="absolute inset-x-0 top-0"></app-navbar>
     <app-card
       *ngFor="let card of [1]; index as i"
       [card]="cardData"
